# reachy_description

./: CMakeLists.txt  README.md  package.xml  reachy.URDF
launch/: display.launch  display.rviz
meshes/: l_gripper_finger.dae  r_gripper_finger.dae
